[package]
name = "fluxis-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
thiserror = "1.0.44"
clap = { version = "4.3.21", features = ["derive"] }
zip = "0.6.6"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
